# GLWrapper

./: .gitignore  CMakeLists.txt  FindGLWrapper.cmake  Findtools3d.cmake  testScene.json
glad/include/glad/: glad.h
glad/src/: glad.c
include/GLWrapper/: Common.h  HelperFuncs.h  Loader.h
include/tools3d/: Common.h  HelperFuncs.h  Loader.h  Matrix.h  Mesh.h  MeshManager.h  Singleton.h  StaticModel.h  Transform.h  UBO.h  VBO.h  Vector.h
src/: HelperFuncs.cpp  Loader.cpp  Mesh.cpp  MeshManager.cpp  MeshManager.h  StaticModel.cpp  Transform.cpp  UBO.cpp  VBO.cpp
